[package]
name = "yewa-pp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
log = "0.4.0"
env_logger = "0.9"
wasm-logger = "0.2"
radix_fmt = "1.0.0"
yew = "0.18"
web-sys = "0.3.52"
css-in-rust = { version = "0.5.0", features = ["yew_integration"] }
